# gridiron

./: .gitignore  Cargo.toml  README.md  durations.csv  plot.py
benches/: compute.rs  index_space.rs
examples/: advect1d-blocks.rs  advect1d-quilt.rs  advect1d.rs  automaton.rs  best_case_scaling.rs  compute.rs  euler.rs  index_space.rs  mt_scaling.rs  rayon-channels.rs  rayon_channels.rs  ring.rs
src/: adjacency_list.rs  aug_bst.rs  aug_node.rs  automata.rs  automaton.rs  bst.rs  bst2.rs  cit.rs  compute.rs  index_space.rs  interval_map.rs  interval_set.rs  interval_tree.rs  lib.rs  meshing.rs  num_vec.rs  overlap.rs  patch.rs  quilt.rs  rect_map.rs  thread_pool.rs
src/host/: mod.rs
src/host/msg/: mod.rs
src/hydro/: error.rs  euler.rs  euler2d.rs  euler2d_ref.rs  euler3d.rs  geometry.rs  mod.rs
src/message/: backoff.rs  comm.rs  mod.rs  orderer.rs  tcp.rs  util.rs
src/solvers/: euler2d_pcm.rs  mod.rs
src/stats/: mod.rs
tools/: bench.py  bench_euler_dist.py  plot_advect.py  plot_bench.py  plot_euler.py  plot_perf.py  run_bench.py  stitch_euler.py  test_euler_dist.py
