[package]
name = "gridiron"
version = "0.1.0"
authors = ["Jonathan Zrake <jonathan.zrake@gmail.com>"]
edition = "2018"

[dependencies]
rayon = "1.5"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.1"
clap = "3.0.0-beta"
core_affinity = "0.5"
simple_logger = "1.11.0"
log = "*"
zmq = {version = "0.9", features=["vendored"]}
signal-hook = "0.3.8"